Added Model Deployment and Feature Extraction

--- a/AzureMLTraining.ipynb
+++ b/AzureMLTraining.ipynb
@@ -247,13 +247,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6bc08fba58224d199667a71f6c6b812c",
+       "model_id": "2746cb9e8b1c4cfdb8eb17b66f4432e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -272,22 +272,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>AccidentDetection</td><td>AccidentDetection_1555647017_83bbe643</td><td>azureml.scriptrun</td><td>Queued</td><td><a href=\"https://mlworkspace.azure.ai/portal/subscriptions/e298a653-a33f-4b32-9ec2-2adfbd3b649d/resourceGroups/CCGroup7Resources/providers/Microsoft.MachineLearningServices/workspaces/AccidentDetection/experiments/AccidentDetection/runs/AccidentDetection_1555647017_83bbe643\" target=\"_blank\" rel=\"noopener\">Link to Azure Portal</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.script_run.ScriptRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
+       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>AccidentDetection</td><td>AccidentDetection_1555647017_83bbe643</td><td>azureml.scriptrun</td><td>Running</td><td><a href=\"https://mlworkspace.azure.ai/portal/subscriptions/e298a653-a33f-4b32-9ec2-2adfbd3b649d/resourceGroups/CCGroup7Resources/providers/Microsoft.MachineLearningServices/workspaces/AccidentDetection/experiments/AccidentDetection/runs/AccidentDetection_1555647017_83bbe643\" target=\"_blank\" rel=\"noopener\">Link to Azure Portal</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.script_run.ScriptRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
       ],
       "text/plain": [
        "Run(Experiment: AccidentDetection,\n",
        "Id: AccidentDetection_1555647017_83bbe643,\n",
        "Type: azureml.scriptrun,\n",
-       "Status: Queued)"
+       "Status: Running)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,18 +297,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download the saved Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading from outputs/model-10.data-00000-of-00001 to ./model/model-10.data-00000-of-00001 ...\n",
+      "Downloading from outputs/model-10.index to ./model/model-10.index ...\n",
+      "Downloading from outputs/model-10.meta to ./model/model-10.meta ...\n",
+      "Downloading from outputs/model-15.data-00000-of-00001 to ./model/model-15.data-00000-of-00001 ...\n",
+      "Downloading from outputs/model-15.index to ./model/model-15.index ...\n",
+      "Downloading from outputs/model-15.meta to ./model/model-15.meta ...\n",
+      "Downloading from outputs/model-20.data-00000-of-00001 to ./model/model-20.data-00000-of-00001 ...\n",
+      "Downloading from outputs/model-20.index to ./model/model-20.index ...\n",
+      "Downloading from outputs/model-20.meta to ./model/model-20.meta ...\n",
+      "Downloading from outputs/model-25.data-00000-of-00001 to ./model/model-25.data-00000-of-00001 ...\n",
+      "Downloading from outputs/model-25.index to ./model/model-25.index ...\n",
+      "Downloading from outputs/model-25.meta to ./model/model-25.meta ...\n",
+      "Downloading from outputs/model-30.data-00000-of-00001 to ./model/model-30.data-00000-of-00001 ...\n",
+      "Downloading from outputs/model-30.index to ./model/model-30.index ...\n",
+      "Downloading from outputs/model-30.meta to ./model/model-30.meta ...\n",
+      "Downloading from outputs/model-5.data-00000-of-00001 to ./model/model-5.data-00000-of-00001 ...\n",
+      "Downloading from outputs/model-5.index to ./model/model-5.index ...\n",
+      "Downloading from outputs/model-5.meta to ./model/model-5.meta ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a model folder in the current directory\n",
+    "os.makedirs('./model', exist_ok=True)\n",
+    "\n",
+    "for f in run.get_file_names():\n",
+    "    if f.startswith('outputs/model'):\n",
+    "        output_file_path = os.path.join('./model', f.split('/')[-1])\n",
+    "        print('Downloading from {} to {} ...'.format(f, output_file_path))\n",
+    "        run.download_file(name=f, output_file_path=output_file_path)                  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.makedirs('./CarCrashModel', exist_ok=True)\n",
-    "\n",
-    "for f in run.get_file_names():\n",
-    "    if f.startswith('outputs/CarCrashModel'):\n",
-    "        output_file_path = os.path.join('./CarCrashModel', f.split('/')[-1])\n",
-    "        print('Downloading from {} to {} ...'.format(f, output_file_path))\n",
-    "        run.download_file(name=f, output_file_path=output_file_path)                    "
+    "model = run.register_model(model_name='crash-detection', model_path='outputs')"
    ]
   },
   {
