--- a/AzureMLDeploy.ipynb
+++ b/AzureMLDeploy.ipynb
@@ -21,9 +21,12 @@
     "import tensorflow as tf\n",
     "\n",
     "from azureml.core.model import Model\n",
+    "from utils import FeatureExtractor\n",
     "\n",
     "def init():\n",
-    "    global X, output, sess\n",
+    "    global X, feat, output, sess\n",
+    "    feat = FeatureExtractor()\n",
+    "    \n",
     "    tf.reset_default_graph()\n",
     "    model_root = Model.get_model_path('crash-detection')\n",
     "    saver = tf.train.import_meta_graph(os.path.join(model_root, 'final_model.meta'))\n",
@@ -35,8 +38,11 @@
     "\n",
     "def run(raw_data):\n",
     "    data = np.array(json.loads(raw_data)['data'])\n",
+    "    features = feat.extract_features([data])\n",
+    "    features = features[0]\n",
+    "    \n",
     "    # make prediction\n",
-    "    out = output.eval(session=sess, feed_dict={X: data})\n",
+    "    out = output.eval(session=sess, feed_dict={X: features})\n",
     "    y_hat = np.argmax(out, axis=1)\n",
     "    print(\"y_hat: \", y_hat)\n",
     "    return y_hat.tolist()"
@@ -106,7 +112,8 @@
     "\n",
     "imgconfig = ContainerImage.image_configuration(execution_script=\"score.py\", \n",
     "                                               runtime=\"python\", \n",
-    "                                               conda_file=\"myenv.yml\")"
+    "                                               conda_file=\"myenv.yml\"\n",
+    "                                               dependencies=[])"
    ]
   },
   {
