--- a/AzureMLTraining.ipynb
+++ b/AzureMLTraining.ipynb
@@ -115,7 +115,7 @@
      "output_type": "stream",
      "text": [
       "Found existing compute target\n",
-      "{'currentNodeCount': 0, 'targetNodeCount': 0, 'nodeStateCounts': {'preparingNodeCount': 0, 'runningNodeCount': 0, 'idleNodeCount': 0, 'unusableNodeCount': 0, 'leavingNodeCount': 0, 'preemptedNodeCount': 0}, 'allocationState': 'Steady', 'allocationStateTransitionTime': '2019-04-19T04:08:11.447000+00:00', 'errors': None, 'creationTime': '2019-04-18T23:11:51.292045+00:00', 'modifiedTime': '2019-04-18T23:12:07.921232+00:00', 'provisioningState': 'Succeeded', 'provisioningStateTransitionTime': None, 'scaleSettings': {'minNodeCount': 0, 'maxNodeCount': 4, 'nodeIdleTimeBeforeScaleDown': 'PT120S'}, 'vmPriority': 'Dedicated', 'vmSize': 'STANDARD_NC6'}\n"
+      "{'currentNodeCount': 0, 'targetNodeCount': 0, 'nodeStateCounts': {'preparingNodeCount': 0, 'runningNodeCount': 0, 'idleNodeCount': 0, 'unusableNodeCount': 0, 'leavingNodeCount': 0, 'preemptedNodeCount': 0}, 'allocationState': 'Steady', 'allocationStateTransitionTime': '2019-04-21T19:14:22.263000+00:00', 'errors': None, 'creationTime': '2019-04-18T23:11:51.292045+00:00', 'modifiedTime': '2019-04-18T23:12:07.921232+00:00', 'provisioningState': 'Succeeded', 'provisioningStateTransitionTime': None, 'scaleSettings': {'minNodeCount': 0, 'maxNodeCount': 4, 'nodeIdleTimeBeforeScaleDown': 'PT120S'}, 'vmPriority': 'Dedicated', 'vmSize': 'STANDARD_NC6'}\n"
      ]
     }
    ],
@@ -247,13 +247,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2746cb9e8b1c4cfdb8eb17b66f4432e4",
+       "model_id": "6970897dfe91475082a9803d85593e86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -272,22 +272,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>AccidentDetection</td><td>AccidentDetection_1555647017_83bbe643</td><td>azureml.scriptrun</td><td>Running</td><td><a href=\"https://mlworkspace.azure.ai/portal/subscriptions/e298a653-a33f-4b32-9ec2-2adfbd3b649d/resourceGroups/CCGroup7Resources/providers/Microsoft.MachineLearningServices/workspaces/AccidentDetection/experiments/AccidentDetection/runs/AccidentDetection_1555647017_83bbe643\" target=\"_blank\" rel=\"noopener\">Link to Azure Portal</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.script_run.ScriptRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
+       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>AccidentDetection</td><td>AccidentDetection_1556475402_29a7a716</td><td>azureml.scriptrun</td><td>Queued</td><td><a href=\"https://mlworkspace.azure.ai/portal/subscriptions/e298a653-a33f-4b32-9ec2-2adfbd3b649d/resourceGroups/CCGroup7Resources/providers/Microsoft.MachineLearningServices/workspaces/AccidentDetection/experiments/AccidentDetection/runs/AccidentDetection_1556475402_29a7a716\" target=\"_blank\" rel=\"noopener\">Link to Azure Portal</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.script_run.ScriptRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
       ],
       "text/plain": [
        "Run(Experiment: AccidentDetection,\n",
-       "Id: AccidentDetection_1555647017_83bbe643,\n",
+       "Id: AccidentDetection_1556475402_29a7a716,\n",
        "Type: azureml.scriptrun,\n",
-       "Status: Running)"
+       "Status: Queued)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,34 +305,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading from outputs/model-10.data-00000-of-00001 to ./model/model-10.data-00000-of-00001 ...\n",
-      "Downloading from outputs/model-10.index to ./model/model-10.index ...\n",
-      "Downloading from outputs/model-10.meta to ./model/model-10.meta ...\n",
-      "Downloading from outputs/model-15.data-00000-of-00001 to ./model/model-15.data-00000-of-00001 ...\n",
-      "Downloading from outputs/model-15.index to ./model/model-15.index ...\n",
-      "Downloading from outputs/model-15.meta to ./model/model-15.meta ...\n",
-      "Downloading from outputs/model-20.data-00000-of-00001 to ./model/model-20.data-00000-of-00001 ...\n",
-      "Downloading from outputs/model-20.index to ./model/model-20.index ...\n",
-      "Downloading from outputs/model-20.meta to ./model/model-20.meta ...\n",
-      "Downloading from outputs/model-25.data-00000-of-00001 to ./model/model-25.data-00000-of-00001 ...\n",
-      "Downloading from outputs/model-25.index to ./model/model-25.index ...\n",
-      "Downloading from outputs/model-25.meta to ./model/model-25.meta ...\n",
-      "Downloading from outputs/model-30.data-00000-of-00001 to ./model/model-30.data-00000-of-00001 ...\n",
-      "Downloading from outputs/model-30.index to ./model/model-30.index ...\n",
-      "Downloading from outputs/model-30.meta to ./model/model-30.meta ...\n",
-      "Downloading from outputs/model-5.data-00000-of-00001 to ./model/model-5.data-00000-of-00001 ...\n",
-      "Downloading from outputs/model-5.index to ./model/model-5.index ...\n",
-      "Downloading from outputs/model-5.meta to ./model/model-5.meta ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create a model folder in the current directory\n",
     "os.makedirs('./model', exist_ok=True)\n",
@@ -346,9 +321,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModelPathNotFoundException",
+     "evalue": "Could not locate the provided model_path outputs in the set of files uploaded to the run: []\n                See https://aka.ms/run-logging for more details.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModelPathNotFoundException\u001b[0m                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-4f20fb954e67>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrun\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mregister_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'crash-detection'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'outputs'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/conda/envs/crash/lib/python3.7/site-packages/azureml/core/run.py\u001b[0m in \u001b[0;36mregister_model\u001b[0;34m(self, model_name, model_path, tags, properties, **kwargs)\u001b[0m\n\u001b[1;32m   1413\u001b[0m         \u001b[0;34m:\u001b[0m\u001b[0mrtype\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mazureml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mModel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1414\u001b[0m         \"\"\"\n\u001b[0;32m-> 1415\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mregister_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mproperties\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1416\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1417\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/envs/crash/lib/python3.7/site-packages/azureml/_run_impl/run_history_facade.py\u001b[0m in \u001b[0;36mregister_model\u001b[0;34m(self, model_name, model_path, tags, properties, asset_id)\u001b[0m\n\u001b[1;32m    313\u001b[0m             raise ModelPathNotFoundException(\n\u001b[1;32m    314\u001b[0m                 \"\"\"Could not locate the provided model_path {} in the set of files uploaded to the run: {}\n\u001b[0;32m--> 315\u001b[0;31m                 See https://aka.ms/run-logging for more details.\"\"\".format(model_path, str(run_files)))\n\u001b[0m\u001b[1;32m    316\u001b[0m         \u001b[0martifacts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m\"prefix\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0martifact_prefix_id\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    317\u001b[0m         \u001b[0mmetadata_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModelPathNotFoundException\u001b[0m: Could not locate the provided model_path outputs in the set of files uploaded to the run: []\n                See https://aka.ms/run-logging for more details."
+     ]
+    }
+   ],
    "source": [
     "model = run.register_model(model_name='crash-detection', model_path='outputs')"
    ]
