Uploaded final changes

--- a/Anticipating-Accidents/Mask_R-CNN_demo.ipynb
+++ b/Anticipating-Accidents/Mask_R-CNN_demo.ipynb
@@ -338,7 +338,7 @@
     "# set up demo for keypoints\n",
     "config_file = \"../configs/caffe2/e2e_faster_rcnn_R_101_FPN_1x_caffe2.yaml\"\n",
     "cfg.merge_from_file(config_file)\n",
-    "cfg.merge_from_list([\"MODEL.DEVICE\", \"cuda\"])\n",
+    "cfg.merge_from_list([\"MODEL.DEVICE\", \"cpu\"])\n",
     "cfg.merge_from_list([\"MODEL.MASK_ON\", False])\n",
     "\n",
     "coco_demo = COCODemo(\n",
